cluster/apps/openclaw/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: clawdbot
  namespace: openclaw
spec:
  hosts:
  - clawdbot.${domain_name}
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - route:
    - destination:
        host: clawdbot.openclaw.svc.cluster.local
        port:
          number: 18789
    match:
    - authority:
        exact: clawdbot.${domain_name}
      uri:
        prefix: /
